# coding-scraps

./: CMakeLists.txt  conanfile.txt
LearningVulkan/chapter_3/: CMakeLists.txt
LearningVulkan/chapter_3/include/: VulkanApplication.h  VulkanInstance.h  VulkanLayerAndExtension.h
LearningVulkan/chapter_3/source/: VulkanApplication.cpp  VulkanInstance.cpp  VulkanLayerAndExtension.cpp  main.cpp
cpp/: CMakeLists.txt
cpp/concurrency/: CMakeLists.txt  memory-reordering.cpp
cpp/modules/: CMakeLists.txt  main.cpp
projecteuler.net/: CMakeLists.txt  conanfile.txt
projecteuler.net/tests/: CMakeLists.txt  main.cpp
projecteuler.net/utility/: CMakeLists.txt
rust/hello-rust/: Cargo.toml
rust/hello-rust/src/: main.rs
vulkan/: CMakeLists.txt  conanfile.txt
vulkan/hello-triangle/: CMakeLists.txt
vulkan/hello-triangle/inc/: HelloTriangle.h
vulkan/hello-triangle/src/: HelloTriangle.cpp  main.cpp
vulkan/hello_triangle/: CMakeLists.txt
vulkan/hello_triangle/src/: main.cpp
vulkan/vulkan-tutorial.com/01-hello-triangle/src/: HelloTriangle.cpp
vulkan/vulkan-tutorial.com/02-vertex-buffers/inc/: VertexBuffers.h
vulkan/vulkan-tutorial.com/04-texture-mapping/inc/: TextureMapping.h
vulkan/vulkan-tutorial.com/04-texture-mapping/shaders/: shader.vert
vulkan/vulkan-tutorial.com/04-texture-mapping/src/: main.cpp
vulkan/vulkan-tutorial.com/05-depth-buffering/src/: main.cpp
vulkan/vulkan-tutorial.com/06-loading-models/inc/: LoadingModels.h
vulkan/vulkan-tutorial.com/06-loading-models/src/: LoadingModels.cpp
vulkan/vulkan-tutorial.com/07-generating-mipmaps/: CMakeLists.txt
vulkan/vulkan-tutorial.com/07-generating-mipmaps/inc/: GeneratingMipmaps.h
vulkan/vulkan-tutorial.com/07-generating-mipmaps/src/: GeneratingMipmaps.cpp  main.cpp
vulkan/vulkan-tutorial.com/08-multisampling/: CMakeLists.txt
vulkan/vulkan-tutorial.com/08-multisampling/inc/: Multisampling.h
vulkan/vulkan-tutorial.com/08-multisampling/src/: Multisampling.cpp  main.cpp
vulkan/vulkan-tutorial.com/depth-buffering/: CMakeLists.txt
vulkan/vulkan-tutorial.com/depth-buffering/inc/: DepthBuffering.h
vulkan/vulkan-tutorial.com/depth-buffering/shaders/: shader.vert
vulkan/vulkan-tutorial.com/depth-buffering/src/: DepthBuffering.cpp
vulkan/vulkan-tutorial.com/hello-triangle/: CMakeLists.txt
vulkan/vulkan-tutorial.com/hello-triangle/inc/: HelloTriangle.h
vulkan/vulkan-tutorial.com/hello-triangle/shaders/: shader.vert
vulkan/vulkan-tutorial.com/hello-triangle/src/: HelloTriangle.cpp  main.cpp
vulkan/vulkan-tutorial.com/loading-models/: CMakeLists.txt
vulkan/vulkan-tutorial.com/loading-models/inc/: LoadingModels.h
vulkan/vulkan-tutorial.com/loading-models/src/: LoadingModels.cpp  main.cpp
vulkan/vulkan-tutorial.com/texture-mapping/: CMakeLists.txt
vulkan/vulkan-tutorial.com/texture-mapping/inc/: TextureMapping.h
vulkan/vulkan-tutorial.com/texture-mapping/src/: TextureMapping.cpp
vulkan/vulkan-tutorial.com/uniform-buffers/: CMakeLists.txt
vulkan/vulkan-tutorial.com/uniform-buffers/inc/: UniformBuffers.h
vulkan/vulkan-tutorial.com/uniform-buffers/shaders/: shader.vert
vulkan/vulkan-tutorial.com/uniform-buffers/src/: UniformBuffers.cpp  main.cpp
vulkan/vulkan-tutorial.com/vertex-buffers/: CMakeLists.txt
vulkan/vulkan-tutorial.com/vertex-buffers/inc/: VertexBuffers.h
vulkan/vulkan-tutorial.com/vertex-buffers/shaders/: shader.vert
vulkan/vulkan-tutorial.com/vertex-buffers/src/: VertexBuffers.cpp  main.cpp
